shared_library("libSkiaSharp") {
    sources = [
        "../src/sk_managedstream.cpp",
        "../src/sk_xamarin.cpp",
        "../src/SkiaKeeper.c",
        "../src/SkManagedStream.cpp",
    ]
    include_dirs = [
        "../../externals/skia/include/c",
        "../../externals/skia/include/config",
        "../../externals/skia/include/core",
        "../../externals/skia/include/effects",
        "../../externals/skia/include/pathops",
        "../../externals/skia/include/codec",
        "../../externals/skia/include/pathops",
        "../../externals/skia/include/pipe",
        "../../externals/skia/include/ports",
        "../../externals/skia/include/private",
        "../../externals/skia/include/utils",
        "../../externals/skia/include/images",
        "../../externals/skia/src/c",
        "../../externals/skia/src/core",
        "../../externals/skia/src/sfnt",
        "../../externals/skia/src/image",
        "../../externals/skia/src/opts",
        "../../externals/skia/src/utils",
        "../../externals/skia/include/gpu",
        "../../externals/skia/src/gpu"
    ]
    #configs = ["//gn:default"]
}